--- a/src/components/NavButton/NavButton.css
+++ b/src/components/NavButton/NavButton.css
@@ -1,7 +1,7 @@
 .nav-button img{
-    width:40px;
     position: relative;
     padding:5px;
+    height:50px;
 }
 .nav-button{
     padding-right:15px;
