--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,9 +5,9 @@
     min-width:700px;
     height: 70px;
     border-bottom: 5px solid #a50330;
-    position:sticky;
+    position:fixed;
+    width:100%;
     top:0;
-    right:0;
     display:flex;
     text-align: center;
     align-items: center;
@@ -27,6 +27,7 @@
     padding-left:30px;
     padding-right:30px;
     flex-shrink:0;
+    cursor: pointer;
 }
 .nav-title img{
     height:40px;
