--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,16 @@ body{
   font-family: EffraRegular;
   src:url("./Effra_Std_Rg.ttf")
 }
+.header{
+  font-family: EffraMedium;
+  font-size: 64px;
+  color:#a50330;
+  margin-top:5px;
+  margin-bottom:5px;
+}
+.subheader{
+  font-family: EffraMedium;
+  font-size:20px;
+  color:#828282;
+  margin-bottom:5px;
+}
